# tidesdb-python

./: .gitignore  MANIFEST.in  README.md  __init__.py  creadme.md  pyproject.toml  requirements.txt  setup.ps1  setup.py  setup.sh  tidesdb.py
.github/workflows/: build_and_test_tidesdb.yml  test.yml  tidesdb-python-build-test.yml
samples/: basic_operations.py  compaction_operations.py  cursor_operations.py  transaction_operations.py
src/tidesdb/: __init__.py  tidesdb.py
tests/: mock_tidesdb.py  test_basic_operations.py  test_compaction.py  test_create_cf.py  test_cursor.py  test_data_operations.py  test_tidesdb.py  test_transaction.py
tidesdb/: __init__.py  core.py  tidesdb.py
